# skills-catalog

./: .env.example  .gitignore  README.md  artifact_manager.py  catalog.yaml  event_interceptor.py  main.py  pyproject.toml  skill_loader.py  tool_executor.py
documentation/: architecture.md
skills/calculator/: SKILL.md  skills.json
skills/calculator/scripts/: add.py  divide.py  multiply.py  subtract.py
skills/especificar_testcase/: SKILL.md  instructions.md  skills.json
skills/especificar_testcase/assets/: report-template.md
skills/especificar_testcase/scripts/: gitlab_client.py  publish_testcase.py
skills/especificar_user_story/: SKILL.md  instructions.md  skills.json
skills/especificar_user_story/assets/: userstory-template.md  userstory_template.md
skills/especificar_user_story/scripts/: write_userstory.py
skills/evaluar-test-case/: SKILL.md  gitlab_client.py  instructions.md
skills/evaluar-test-case/assets/: report-template.md
skills/evaluar_test_case/: SKILL.md  instructions.md  skills.json
skills/evaluar_test_case/assets/: report-template.md
skills/evaluar_test_case/references/: projects.md
skills/evaluar_test_case/scripts/: get_gitlab_test_case.py  gitlab_client.py
skills/gitlab_manager/: SKILL.md  instructions.md  skills.json
skills/gitlab_manager/scripts/: create_group.py  create_issue.py  create_milestone.py  get_group.py  gitlab_client.py  list_groups.py  list_issues.py  list_milestones.py  list_projects.py  list_users.py  update_issue.py
skills/qdrant_kb/: SKILL.md  skills.json
skills/qdrant_kb/scripts/: read_artifact.py  (+3 more)
