[project]
name = "skills-catalog"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "google-adk>=1.28.1",
    "google-genai>=1.70.0",
    "google-generativeai>=0.8.6",
    "hvac>=2.4.0",
    "litellm>=1.83.0",
    "python-dotenv>=1.2.2",
    "python-gitlab>=8.2.0",
    "pydantic>=2.10.6",
    "qdrant-client==1.11.0",
    "redis>=5.0.0",
    "tqdm>=4.67.1",
]

[dependency-groups]
dev = [
    "pyinstaller>=6.19.0",
]

[project.scripts]
